@@ -170,13 +170,13 @@ $result_sectioning{'section_before_chapter'}{'section_childs'}[1]{'toplevel_prev
 
 $result_errors{'section_before_chapter'} = [
   {
-    'error_line' => ':3: lowering the section level of @chapter appearing after a lower element
+    'error_line' => ':3: warning: lowering the section level of @chapter appearing after a lower element
 ',
     'file_name' => '',
     'line_nr' => 3,
     'macro' => '',
     'text' => 'lowering the section level of @chapter appearing after a lower element',
-    'type' => 'error'
+    'type' => 'warning'
   }
 ];
 
