@@ -1,1 +1,1 @@
-no_node.texi:11: lowering the section level of @top appearing after a lower element
+no_node.texi:11: warning: lowering the section level of @top appearing after a lower element
